fix margin in listCollapse

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -4,7 +4,7 @@
   display: flex;
   & .listCollapseAbout {
     margin-top: 8px;
-    margin-bottom: 15px;
+    margin-bottom: 50px;
     justify-content: center;
     width: 71%;
     display: grid;
