--- a/src/styles/tag.scss
+++ b/src/styles/tag.scss
@@ -1,27 +1,33 @@
-.tag{
-    background-color: #ff6060;
-    color:#FFFFFF;
-    font-size: 14px;   
-    border-radius: 10px;
-    width:fit-content;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+.tag {
+  background-color: #ff6060;
+  color: #ffffff;
+  font-size: 14px;
+  border-radius: 10px;
+  width: fit-content;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
-.listTag{      
-    width: fit-content;
-    display:flex;
-    gap:10px;
-    margin: 0;
+.listTag {
+  width: fit-content;
+  display: flex;
+  gap: 10px;
+  margin: 0;
 }
-@media screen and (max-width: 768px){
-    .tag{
-        font-size: 10px;
-        padding-left: 13px;
-        padding-right: 13px;
-        padding-top: 6px;
-        padding-bottom: 6px;;
-    }
-    
+@media screen and (max-width: 768px) {
+  .tag {
+    font-size: 10px;
+    padding-left: 13px;
+    padding-right: 13px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .tag {
+    font-size: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
